Implement WebApi infrastructure

--- a/WorkflowService.WebApi/appsettings.Development.json
+++ b/WorkflowService.WebApi/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Mongo": {
+        "Database": "Urly",
+        "Host": "localhost",
+        "Port": 27017,
+        "User": "root",
+        "Password": "EP4e7Xiz0Ds5YOMjWAwrt5OnZZdIFPel"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
