--- a/WorkflowService.WebApi/appsettings.json
+++ b/WorkflowService.WebApi/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Mongo": {
+        "Database": "Urly",
+        "Host": "mongo",
+        "Port": 27017,
+        "User": "root",
+        "Password": "EP4e7Xiz0Ds5YOMjWAwrt5OnZZdIFPel"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
