--- a/WorkflowService.WebApi/WorkflowService.WebApi.csproj
+++ b/WorkflowService.WebApi/WorkflowService.WebApi.csproj
@@ -1,11 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    <ItemGroup>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WorkflowService.Domain\WorkflowService.Domain.csproj" />
     </ItemGroup>
 
 </Project>
