--- a/Taskly.Workflow.WebApi/Properties/launchSettings.json
+++ b/Taskly.Workflow.WebApi/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "$schema": "http://json.schemastore.org/launchsettings.json",
     "profiles": {
-        "WorkflowService.WebApi": {
+        "Taskly.Workflow.WebApi": {
             "commandName": "Project",
             "launchBrowser": true,
             "applicationUrl": "http://localhost:5002",
