--- a/Taskly.Workflow.WebApi/Properties/launchSettings.json
+++ b/Taskly.Workflow.WebApi/Properties/launchSettings.json
@@ -4,6 +4,7 @@
         "Taskly.Workflow.WebApi": {
             "commandName": "Project",
             "launchBrowser": true,
+            "launchUrl": "swagger",
             "applicationUrl": "http://localhost:5002",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
