--- a/Taskly.Workflow.WebApi/appsettings.Development.json
+++ b/Taskly.Workflow.WebApi/appsettings.Development.json
@@ -1,10 +1,8 @@
 {
     "Mongo": {
-        "Database": "Urly",
+        "Database": "Taskly",
         "Host": "localhost",
-        "Port": 27017,
-        "User": "root",
-        "Password": "EP4e7Xiz0Ds5YOMjWAwrt5OnZZdIFPel"
+        "Port": 27017
     },
     "Logging": {
         "LogLevel": {
