Move database classes to Application project

--- a/Taskly.Workflow.WebApi/Taskly.Workflow.WebApi.csproj
+++ b/Taskly.Workflow.WebApi/Taskly.Workflow.WebApi.csproj
@@ -5,12 +5,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
-        <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Taskly.Workflow.Application\Taskly.Workflow.Application.csproj" />
       <ProjectReference Include="..\Taskly.Workflow.Domain\Taskly.Workflow.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Database" />
     </ItemGroup>
 
 </Project>
